@@ -13,6 +13,8 @@
  - (dtucker) [openbsd-compat/port-aix.c openbsd-compat/port-aix.h] Move
    include from port-aix.h to port-aix.c and remove unnecessary function
    definition.  Fixes build errors on AIX.
+ - (dtucker) [configure.ac loginrec.c] Bug #464: Use updwtmpx on platforms
+   that support it.  from & ok mouring@
 
 20040207
  - (dtucker) OpenBSD CVS Sync
